--- a/res/style.css
+++ b/res/style.css
@@ -21,8 +21,10 @@ a:hover
 
 button
 {
+    background-color: white;
     border: 2px solid gray;
     border-radius: 10px;
+    padding: 2px;
 }
 
 div.main
@@ -187,4 +189,12 @@ table, th, td
     border: 2px solid gray;
     padding: 2px 5px 2px 5px;
     text-align: center;
+    vertical-align: middle;
 }
+
+.content table, div
+{
+    margin-left: auto;
+    margin-right: auto;
+}
+
