move password hashing to internal use instead of mysql query

--- a/res/style.css
+++ b/res/style.css
@@ -208,3 +208,11 @@ table, th, td
     text-align: center;
     vertical-align: middle;
 }
+
+.loading
+{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    text-align: center;
+}
