--- a/res/templates/default/style.css
+++ b/res/templates/default/style.css
@@ -124,6 +124,35 @@ div.langs-bottom
     background-image: url(img/menubottom.png);
 }
 
+div.templates-top 
+{
+    float: left;
+    width: 100%;
+    height: 30px;
+    background-image: url(img/menutop.png);
+}
+
+div.templates
+{
+    margin: auto 0px;
+    float: left;
+    width: 100%;
+    min-height: 20px;   
+    padding-left: 30px;
+    padding-right: 30px;
+    background-image: url(img/menucont.png);
+    background-repeat: repeat-y;
+    overflow: hidden; 
+}
+
+div.templates-bottom 
+{
+    float: left;
+    width: 100%;
+    height: 30px;
+    background-image: url(img/menubottom.png);
+}
+
 div.profile-top {}
 
 div.profile
