--- a/res/templates/default/style.css
+++ b/res/templates/default/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: #000;
+    background-color: #191919;
     color: #FFF;
     font-size: 14px;
 }     
@@ -9,14 +9,14 @@ a
 {
     cursor: pointer; cursor: hand;
     color: white;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:hover
 {
     cursor: pointer; cursor: hand;
-    color: red;
-    text-decoration: underline;
+    color: orange;
+    text-decoration: none;
 }
 
 button
@@ -124,35 +124,6 @@ div.langs-bottom
     background-image: url(img/menubottom.png);
 }
 
-div.templates-top 
-{
-    float: left;
-    width: 100%;
-    height: 30px;
-    background-image: url(img/menutop.png);
-}
-
-div.templates
-{
-    margin: auto 0px;
-    float: left;
-    width: 100%;
-    min-height: 20px;   
-    padding-left: 30px;
-    padding-right: 30px;
-    background-image: url(img/menucont.png);
-    background-repeat: repeat-y;
-    overflow: hidden; 
-}
-
-div.templates-bottom 
-{
-    float: left;
-    width: 100%;
-    height: 30px;
-    background-image: url(img/menubottom.png);
-}
-
 div.profile-top {}
 
 div.profile
@@ -191,14 +162,14 @@ div.footer
 {
     cursor: pointer; cursor: hand;
     color: white;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .menu * .item a 
 {
     cursor: pointer; cursor: hand;
     color: white;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .menu a:visited
@@ -208,20 +179,20 @@ div.footer
 
 .menu a:hover
 {
-    color: red;
+    color: orange;
 }
 
 .menu * .itemselected 
 {
     color: white;
-    text-decoration: underline;
+    text-decoration: none;
     font-weight: bold;  
 }
 
 .menu * .itemselected a 
 {
     color: white;
-    text-decoration: underline;
+    text-decoration: none;
     font-weight: bold;  
 }
 
